# cpprestsdk

./: .gitignore  CMakeLists.txt  README.md
Release/: CMakeLists.txt
Release/cmake/: cpprest_find_openssl.cmake
Release/include/cpprest/: streams.h
Release/include/pplx/: pplx.h  pplxcancellation_token.h  pplxtasks.h
Release/src/: CMakeLists.txt
Release/src/http/client/: http_client_asio.cpp
Release/src/http/common/: http_helpers.cpp
Release/src/http/listener/: http_server_asio.cpp
Release/src/pch/: stdafx.h
Release/src/pplx/: threadpool.cpp
Release/src/utilities/: asyncrt_utils.cpp
Release/tests/common/UnitTestpp/: CMakeLists.txt
Release/tests/common/UnitTestpp/src/: stdafx.h
Release/tests/common/utilities/: CMakeLists.txt
Release/tests/functional/http/client/: CMakeLists.txt
Release/tests/functional/http/utilities/: CMakeLists.txt  stdafx.h
Release/tests/functional/json/: CMakeLists.txt
Release/tests/functional/streams/: CMakeLists.txt
Release/tests/functional/websockets/: CMakeLists.txt
